--- a/scss/variables/_sizes.scss
+++ b/scss/variables/_sizes.scss
@@ -1,1 +1,12 @@
 $nav-height: 90px;
+$main-container-width: 1050px;
+$footer-height: 30vh;
+
+$triangle-heigth: 90px;
+$triangle-width: 100px;
+
+$tech-logo-size: 100px;
+
+$font-big: 24px;
+$font-medium: 16px;
+$font-small: 12px;
