--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -23,7 +23,7 @@
   display: flex;
   flex-direction: column;
   margin: 150px auto 0;
-  max-width: 1050px;
+  max-width: $main-container-width;
   width: 100%;
 }
 
@@ -37,17 +37,17 @@
   &::before {
     background: url('./assets/triangle.svg') no-repeat;
     content: '';
-    height: 90px;
+    height: $triangle-heigth;
     position: absolute;
     top: -40px;
     left: -50px;
-    width: 100px;
+    width: $triangle-width;
     z-index: -1;
   }
 }
 
 .title {
-  font-size: 21px;
+  font-size: $font-big;
 }
 
 .platform-title {
@@ -64,9 +64,9 @@
 }
 
 .logo {
-  height: 100px;
+  height: $tech-logo-size;
   margin: 10px 0;
-  width: 100px;
+  width: $tech-logo-size;
 }
 
 .description {
@@ -89,7 +89,7 @@
   width: 100%;
 
   .title {
-    font-size: 16px;
+    font-size: $font-medium;
   }
 
   &::after {
@@ -123,7 +123,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 30vh;
+  height: $footer-height;
 }
 
 .contact-form {
@@ -137,7 +137,7 @@
 
 .label {
   color: $white;
-  font-size: 24px;
+  font-size: $font-big;
   margin: 20px;
 }
 
@@ -173,7 +173,9 @@
 }
 
 @media screen and (max-width: 800px) {
+
   .navbar {
+
     .title {
       display: none;
     }
