--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -56,28 +56,15 @@
 }
 
 .tools {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: repeat(3, max-content);
+  justify-content: center;
   margin: 50px 0;
   width: 100%;
 }
 
-.logo {
-  height: $tech-logo-size;
-  margin: 10px 0;
-  width: $tech-logo-size;
-}
-
-.description {
-  font-size: 14px;
-  line-height: 19px;
-  padding: 10px;
-}
-
 .tech {
   align-items: center;
-  border: 1px solid $green;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
@@ -91,24 +78,24 @@
   .title {
     font-size: $font-medium;
   }
+}
 
-  &::after {
-    background-color: $green;
-    border-radius: 5px;
-    content: '';
-    height: 100%;
-    left: 10px;
-    position: absolute;
-    width: 100%;
-    z-index: -1;
-  }
+.first {
+  border-right: 2px solid $green;
+  grid-row: 1 / 3;
+  justify-content: center;
+}
 
-  &:hover {
-    &::after {
-      left: 0;
-      top: 0;
-    }
-  }
+.logo {
+  height: $tech-logo-size;
+  margin: 10px 0;
+  width: $tech-logo-size;
+}
+
+.description {
+  font-size: 14px;
+  line-height: 19px;
+  padding: 10px;
 }
 
 .release {
