--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -58,7 +58,7 @@
 .tools {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: flex-start;
   margin: 50px 0;
   width: 100%;
 }
