--- a/src/index.scss
+++ b/src/index.scss
@@ -1,1 +1,122 @@
 @import 'scss/application';
+
+.navbar {
+  align-items: center;
+  background-color: $white;
+  box-shadow: 0 5px 10px $grey;
+  display: flex;
+  height: $nav-height;
+  justify-content: space-between;
+  padding: 0 20px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 2;
+
+  .logo {
+    width: 200px;
+  }
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  margin: 150px auto 0;
+  max-width: $main-container-width;
+  width: 100%;
+}
+
+.footer {
+  align-items: center;
+  background-color: $blue;
+  color: $white;
+  display: flex;
+  flex-direction: column;
+  height: $footer-height;
+  justify-content: space-between;
+}
+
+.contact-form {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 2vh;
+  width: 100%;
+}
+
+.label {
+  color: $white;
+  font-size: $font-big;
+  margin: 20px;
+}
+
+.input-email {
+  border-radius: 8px;
+  height: 30px;
+  margin-bottom: 20px;
+  max-width: 300px;
+  padding-left: 12px;
+  width: 100%;
+}
+
+.send {
+  border: 1px solid $white;
+  border-radius: 8px;
+  color: $white;
+  padding: 15px 30px;
+}
+
+.copyright {
+  background: $grey;
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+}
+
+.copyright-text {
+  font-size: 12px;
+}
+
+.white {
+  color: $white;
+}
+
+@media screen and (max-width: 800px) {
+
+  .navbar {
+
+    .title {
+      display: none;
+    }
+  }
+
+  .tools {
+    grid-template-columns: max-content;
+  }
+
+  .platform::before {
+    left: 50px;
+  }
+
+  .platform-title {
+    align-self: center;
+  }
+
+  .tech:not(:last-child) {
+    border-bottom: 2px solid $green;
+    border-right: 0;
+  }
+}
+
+.filter-container {
+  align-items: center;
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+}
+
+.filter {
+  border-bottom: 1px solid $green;
+  padding: 5px 10px;
+}
